--- a/FrontendApi/src/assets/main.css
+++ b/FrontendApi/src/assets/main.css
@@ -7,29 +7,39 @@
   font-weight: normal;
 }
 
-a,
-.green {
+a {
   text-decoration: none;
+  color: var(--vt-c-secondary);
+  transition: color 0.3s ease-in-out;
+}
+
+a:hover {
+  color: var(--vt-c-secondary-hover);
+}
+
+.green {
   color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+}
+
+.green:hover {
+  background-color: hsla(160, 100%, 37%, 0.2);
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: transparent;
   }
 }
 
 @media (min-width: 1024px) {
   body {
     display: flex;
-    place-items: center;
+    justify-content: flex-start; /* Align content to the top left */
+    align-items: flex-start;
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: block; /* Ensure a simple vertical flow */
     padding: 0 2rem;
   }
 }
